--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@radix-ui/react-toggle": "^1.1.1",
         "@radix-ui/react-toggle-group": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.6",
+        "axios": "^1.13.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.4",
@@ -49,6 +50,7 @@
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.55.0",
         "react-resizable-panels": "^2.1.8",
+        "react-router-dom": "^7.9.6",
         "recharts": "^2.13.3",
         "sonner": "^2.0.3",
         "tailwind-merge": "^2.5.5",
